test/bad/name_collision.veld
// BAD: model and enum share the same name
enum Role { admin user }

model Role {
  id: string
}

